# fitness_analysis

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  __init__.py  activity.py  commute.py  main.py  mynetdiary.py  parse_activity.py  parse_fit.py  parse_tcx.py  parse_tcx_gpx.py  pyproject.toml  strava.py  utils.py
fitness_analysis/: __init__.py  cache_db.py  changepoints.py  commute.py  geocoding.py  mynetdiary.py  records.py  routes.py  strava.py  utils.py
