[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitness-analysis"
version = "0.1.0"
description = "Analysis tools for fitness activity data from Strava and MyNetDiary."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pint",
    "pyarrow",
    "scikit-learn",
    "timezonefinder",
    "utm",
    "shapely",
    "activity-parser",
    "ruptures",
    "sqlite-utils",
    "geopy",
]

[tool.uv.sources]
activity-parser = { workspace = true }

[dependency-groups]
dev = ["pre-commit", "ruff"]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "PL", "UP"]

[tool.ruff.lint.pylint]
max-args = 8
